<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:enabled="true"
        android:title="@string/menu_favorites"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:enabled="true"
        android:title="@string/menu_history"
        app:showAsAction="always"/>

</menu>