<RelativeLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.kovapss.transaltenow.View.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/spinners_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/toolbar"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        >
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_from"
            android:layout_width="wrap_content"
            android:minWidth="150dp"
            app:ms_dropdown_max_height="400dp"
            android:layout_height="match_parent"
            app:ms_background_color="@color/colorPrimary"
            app:ms_text_color="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_to"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="150dp"
            app:ms_dropdown_max_height="400dp"
            app:ms_background_color="@color/colorPrimary"
            app:ms_text_color="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>

        <ImageView
            android:id="@+id/langs_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            card_view:srcCompat="@drawable/ic_compare_arrows_black_24dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinners_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp">
        <EditText
            android:id="@+id/input"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:background="@drawable/input_border"
            android:hint="@string/touch_to_write"
            android:inputType="textMultiLine"
            android:minHeight="80dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/offline_preview"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_below="@id/input_card">
        <TextView
            android:id="@+id/offline_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/offline"
            android:textSize="25sp"
            android:layout_marginTop="56dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_card"
        android:layout_marginTop="14dp"
        android:visibility="invisible">


        <TextView
            android:id="@+id/resultText"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"/>

        <ImageView
            android:id="@+id/clear_action_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_clear_black_32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/addto_favorite_button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_action_image"
            card_view:srcCompat="@drawable/ic_star_border_black_32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/yandex_link"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/yandex_link"
        android:layout_below="@+id/result_layout"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:visibility="invisible"
        android:layout_marginTop="62dp"/>

</RelativeLayout>